--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "axios": "^1.2.2",
     "bootstrap": "^5.3.0-alpha1",
+    "flag-icons": "^6.6.6",
     "vue": "^3.2.45"
   },
   "devDependencies": {
