--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "animate.css": "^4.1.1",
     "axios": "^1.2.2",
     "bootstrap": "^5.3.0-alpha1",
     "flag-icons": "^6.6.6",
